--- a/BookingReview/BookingReview.csproj
+++ b/BookingReview/BookingReview.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.143" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.9" />
       <PackageReference Include="MySql.Data" Version="8.1.0" />
     </ItemGroup>
