--- a/BookingReview/BookingReview.csproj
+++ b/BookingReview/BookingReview.csproj
@@ -10,6 +10,12 @@
       <PackageReference Include="Dapper" Version="2.0.143" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.9" />
       <PackageReference Include="MySql.Data" Version="8.1.0" />
+      <PackageReference Include="NPOI" Version="2.6.2" />
+      <PackageReference Include="PDFsharp-MigraDoc" Version="6.0.0-preview-3" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="Views\**" CopyToPublishDirectory="Always" />
     </ItemGroup>
 
 </Project>
