Added new field for input data

--- a/BookingReview/appsettings.json
+++ b/BookingReview/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=qsystem;Uid=root;Pwd=eCaIDZa3eWoi7jv;"
-  }
+  },
+  "ShowInputData": true
 }
